# DRM

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
src/: containers.py  errors.py  main.py  models.py  settings.py  uow.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 1786968ca2f6_.py  1c1671ea20ee_.py  20746f4a5a4d_.py  2bdfe17d926a_.py  2f2f9f309aac_.py  401dbf16370d_.py  43c012d594af_.py  44ec6716fef1_.py  4624ac6f94a1_.py  6546070f4ade_.py  70c1c30b23f2_.py  7638bd5d57e4_.py  7f3ec8caf65b_.py  91c2acebe74a_.py  a1915a0d9075_.py  ae7f1f18ff54_.py  c81d7085d784_.py  ca19eafb91d3_.py  d66ab022b3e0_insert_permission_records.py  e1aa463b4510_.py
src/auth/: api.py  exceptions.py  helpers.py  schemas.py  security.py  services.py
src/categories/: api.py  repositories.py  schemas.py  services.py  uow.py
src/documents/: api.py  repositories.py  schemas.py  services.py  uow.py
src/tags/: api.py  repositories.py  schemas.py  services.py  uow.py
src/users/: api.py  permissions.py  repositories.py  schemas.py  services.py  uow.py
src/utils/: schemas.py
